homeworks/belskiyroman/module-03/lesson-08/course-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app
  labels:
    app: course-app
spec:
  replicas: 10
  selector:
    matchLabels:
      app: course-app
#  strategy:
#    type: Replace
#    rollingUpdate:
#      maxUnavailable: 0
#      maxSurge: 20%
  template:
    metadata:
      labels:
        app: course-app
    spec:
      containers:
        - name: course-app
          image: belskiyroman/test-app:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "101m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: course-app-service
spec:
  type: ClusterIP
  selector:
    app: course-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
