homeworks/belskiyroman/module-03/lesson-08/course-app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
  namespace: default
spec:
  rules:
  - host: course-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: course-app-service
            port:
              number: 80
